[package]
name = "megaui-macroquad"
version = "0.1.4"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/not-fl3/megaui-macroquad"
repository = "https://github.com/not-fl3/megaui-macroquad"
description = """
Macroquad renderer for megaui
"""

[dependencies]
macroquad = "0.3.0-alpha"
megaui = "0.2"
